src/objects/DRDW_Budget_Summary_Detail__c.object
<CustomObject>
    <fields>
        <fullName>Quarter_Duplication_TF__c</fullName>
        <label>Quarter Duplication TF</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>April_Actual__c</fullName>
        <description>April Month Actuals</description>
        <formula>if(ISPICKVAL(Month__c, &apos;April&apos;),M_Actual__c,0.0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>April Actual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Aug_Actual__c</fullName>
        <description>Aug Month Actual</description>
        <formula>if(ISPICKVAL(Month__c, &apos;Aug&apos;),M_Actual__c,0.0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Aug Actual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DRDW_Budget_Summary__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DRDW Budget Summary</label>
        <referenceTo>DRDW_Budget_Summary__c</referenceTo>
        <relationshipLabel>DRDW Budget Summary Details</relationshipLabel>
        <relationshipName>DRDW_Budget_Summary_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dec_Actual__c</fullName>
        <description>Dec Month Actual</description>
        <formula>if(ISPICKVAL(Month__c, &apos;Dec&apos;),M_Actual__c,0.0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dec Actual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Feb_Actual__c</fullName>
        <description>Feb Month Actuals</description>
        <formula>if(ISPICKVAL(Month__c, &apos;Feb&apos;),M_Actual__c,0.0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Feb Actual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Jan_Actual__c</fullName>
        <description>Jan Month Actual</description>
        <formula>if(ISPICKVAL(Month__c, &apos;Jan&apos;),M_Actual__c,0.0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Jan Actual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>July_Actual__c</fullName>
        <description>July Month Actual</description>
        <formula>if(ISPICKVAL(Month__c, &apos;July&apos;),M_Actual__c,0.0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>July Actual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>June_Actual__c</fullName>
        <description>June Month Actual</description>
        <formula>if(ISPICKVAL(Month__c, &apos;June&apos;),M_Actual__c,0.0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>June Actual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>M_Actual__c</fullName>
        <defaultValue>0</defaultValue>
        <label>M Actual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>M_Locked_In_Forecast_Updated__c</fullName>
        <label>-M Locked-In Forecast (Updated)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>M_Locked_In_Forecast__c</fullName>
        <label>M Locked-In Forecast</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>M_Rolling_Forecast__c</fullName>
        <label>M Rolling Forecast</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>March_Actual__c</fullName>
        <description>March Month Actual</description>
        <formula>if(ISPICKVAL(Month__c, &apos;March&apos;),M_Actual__c,0.0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>March Actual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>May_Actual__c</fullName>
        <description>May Month Actual</description>
        <formula>if(ISPICKVAL(Month__c, &apos;May&apos;),M_Actual__c,0.0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>May Actual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <label>Month</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Jan</fullName>
                </value>
                <value>
                    <fullName>Feb</fullName>
                </value>
                <value>
                    <fullName>March</fullName>
                </value>
                <value>
                    <fullName>April</fullName>
                </value>
                <value>
                    <fullName>May</fullName>
                </value>
                <value>
                    <fullName>June</fullName>
                </value>
                <value>
                    <fullName>July</fullName>
                </value>
                <value>
                    <fullName>Aug</fullName>
                </value>
                <value>
                    <fullName>Sept</fullName>
                </value>
                <value>
                    <fullName>Oct</fullName>
                </value>
                <value>
                    <fullName>Nov</fullName>
                </value>
                <value>
                    <fullName>Dec</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nov_Actual__c</fullName>
        <description>Nov Month Actual</description>
        <formula>if(ISPICKVAL(Month__c, &apos;Nov&apos;),M_Actual__c,0.0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nov Actual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Oct_Actual__c</fullName>
        <description>Oct Month Actual</description>
        <formula>if(ISPICKVAL(Month__c, &apos;Oct&apos;),M_Actual__c,0.0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Oct Actual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>DRDW_Budget_Summary_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PO__c</fullName>
        <label>PO</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TBD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quarter__c</fullName>
        <label>Quarter</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sept_Actual__c</fullName>
        <description>Sept Month Actual</description>
        <formula>if(ISPICKVAL(Month__c, &apos;Sept&apos;),M_Actual__c,0.0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sept Actual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Species__c</fullName>
        <label>Species</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <defaultValue>TEXT(YEAR(TODAY()))</defaultValue>
        <label>Year</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>2019</fullName>
                </value>
                <value>
                    <fullName>2020</fullName>
                </value>
                <value>
                    <fullName>2021</fullName>
                </value>
                <value>
                    <fullName>2022</fullName>
                </value>
                <value>
                    <fullName>2023</fullName>
                </value>
                <value>
                    <fullName>2024</fullName>
                </value>
                <value>
                    <fullName>2025</fullName>
                </value>
                <value>
                    <fullName>2026</fullName>
                </value>
                <value>
                    <fullName>2027</fullName>
                </value>
                <value>
                    <fullName>2028</fullName>
                </value>
                <value>
                    <fullName>2029</fullName>
                </value>
                <value>
                    <fullName>2030</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>DRDW Budget Summary Detail</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BSD-{0000}</displayFormat>
        <label>DRDW Budget Summary Detail  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DRDW Budget Summary Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>